tests/codegen/fail/interface/attr_wrong_item.stderr
error: GraphQL interface #[graphql_interface] attribute is applicable to trait and struct definitions only
 --> fail/interface/attr_wrong_item.rs:9:1
  |
9 | enum Character {}
  | ^^^^^^^^^^^^^^^^^
